Bringing you smoother experience! 

- Can search by city on the map page now
- Fixed design of login form
- Fixed a bug where the like button did not change color
- Can now share the video to other SNS